--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -221,7 +221,9 @@ We conducted an empirical efficiency study of the algorithms mentioned above as 
 Experiments were conducted on a personal computer and the programming language $python$ was used to implement models and algorithms.
 
 The simulation consists in the interaction between a recommender and a user. To simulate online learning, ratings from users are known in advance and retrieved at each epoch. 
-We ran each algorithm for several hundred epochs and averaged the results over more than 100 users. Results can be found in section \ref{results} \todo{explain the simulation better}
+We ran each algorithm for several hundred epochs and averaged the results over more than 100 users. 
+
+Results can be found in section \ref{results} \todo{explain the simulation better}
 
 \subsection{Metrics} \label{metrics}
 
