--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -362,7 +362,12 @@ Maybe the more important graph for the comparison is the one above. It tends to 
 
 \section{Conclusion}
 
-blabla
+Thoroughly we built a functional online movie recommender system starting with data mining, features engineering, dimension reduction and several models of reinforcement learning. We argue that this system would certainly work on the entire database of IMDb if run on a scalable system.
+As in \cite{main}, we use the advantages of reinforcement learning compared to supervised learning : the exploitation-exploration tradeoff depends on our hyperparameters and the cold-start problem is easily solved by the former.
+Adapt some algos from \cite{main} to movies as they suggested. It works !
+Use collaborative filtering. It works !
+Use novelty : it works with a great $s$
+Showed that bayes is not viable in production because really slow
 
 \footnotesize
 \bibliographystyle{apalike}
