--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -378,7 +378,7 @@ However, one could argues that the computation could be parallelized on multi-co
 \section{Conclusion}
 
 We built a thorough functional movie recommender system including data mining, features engineering, dimension reduction and several models and content based as well as a collaborative filtering approaches to reinforcement learning. 
-Following the step of \cite{main} who worked on music recommendation, we used the advantages of reinforcement learning to build such a system taking advantages of the exploitation-exploration tradeoff to solve the usual recommender cold-start problem. We also successfully integrate novelty in our model to handle and avoid movie repetition. Moreover, we followed \cite{main} advice to explore collaborative filtering and demonstrated that it outcomes better results than the content based approaches. Finally we define future possible research.
+Following the step of \cite{main} who worked on music recommendation, we used the advantages of reinforcement learning to build such a system taking advantages of the exploitation-exploration tradeoff to solve the usual recommender cold-start problem. We also successfully integrated novelty in our model to handle and avoid too much movie repetition. Moreover, we followed \cite{main} advice to explore collaborative filtering and demonstrated that it outcomes better results than the content based approaches. Finally we defined future possible research.
 
 %We argue that this system would could easlily work on the entire database of IMDb if run on a scalable system.
 %Adapt some algos from \cite{main} to movies as they suggested. It works !
