--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -220,7 +220,7 @@ Experiments were conducted on a personal computer and the programming language $
 The simulation consists in the interaction between a recommender and a user. To simulate online learning, ratings from users are known in advance and retrieved at each epoch. 
 We ran each algorithm for several hundred epochs and averaged the results over more than 100 users. 
 
-Results can be found in section \ref{results} \todo{explain the simulation better}
+Results can be found in section \ref{results} .
 
 \subsection{Metrics} \label{metrics}
 
@@ -304,7 +304,7 @@ Due to the Markov Chain Monte Carlo approximation method and the high number of 
 \begin{center}
 \includegraphics[width=0.47\textwidth]{img/bayes_time1.png}
 \caption{Cumulative sum of the time needed to produce the recommendation}
-\label{greedy3}
+\label{bayes_time1}
 \end{center}
 \end{figure}
 
@@ -323,7 +323,7 @@ Following, \cite{main} suggestion, we then looked at the collaborative filtering
 \begin{center}
 \includegraphics[width=0.47\textwidth]{img/collabo1.png}
 \caption{Comparison of the average cumulative regret for greedy algorithm on the content based model and collaborative filtering model}
-\label{schema}
+\label{collabo1}
 \end{center}
 \end{figure}
 
@@ -333,7 +333,7 @@ The graph above tends to show that the collaborative filtering tends to return b
 \begin{center}
 \includegraphics[width=0.47\textwidth]{img/collabo2.png}
 \caption{Comparison of the mean square error for thecontent based model and collaborative filtering model}
-\label{schema}
+\label{collabo2}
 \end{center}
 \end{figure}
 
@@ -343,7 +343,7 @@ The graph above seems to show that the collaborative filtering model is slightly
 \begin{center}
 \includegraphics[width=0.47\textwidth]{img/collabo3.png}
 \caption{Comparison of the average rating given as feedback by the user for each algorithm}
-\label{schema}
+\label{collabo3}
 \end{center}
 \end{figure}
 
@@ -351,7 +351,19 @@ Maybe the more important graph for the comparison is the one above. It tends to 
 
 \subsection{Overall performance}
 
-\todo{overall performace}
+To conclude the results section, let's look at the overall performance of all models and algorithms 
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.47\textwidth]{img/greedy_all0.png}
+\caption{Comparison of all model and algorithm}
+\label{overallperf}
+\end{center}
+\end{figure}
+
+Obviously, the random random choice is the worst.
+
+The best techniques seems to take a greedy that explore a lot at the beginning and reduce the exploration in profit of exploitation over time while using a collaborative filtering model.
 
 % ------ discussion -------
 \section{Discussion}
@@ -370,8 +382,6 @@ However, one could argues that the computation could be parallelized on multi-co
 \todo{futur work, what could be done if you give me 10 IA guys for a week}
 % combined content based and collaborative filtering
 % comparer avec une approche supervisé
-
-\todo{futur work, real-life data, bias evaluation, big data toussa toussa}
 
 \todo{futur work, real-life data, bias evaluation, big data toussa toussa}
 
