[add] result bayes approx

--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -312,8 +312,7 @@ On the graph above, we can see that the exact bayesian take about 4 minutes to p
 
 \subsubsection{Bayesian inference}
 
-\todo{Bayesian inference}
-
+The Bayesian inference method shown in \citep{main} involve complexe computations. Some parts of the algorithm are partially incomplete and left for interpretation. Furthermore the hyperparameters presented in the paper are used for music recommendation and hence might not be suitable for movie recommendation. Attemps of implementation of this method have not provided expected results shown in the paper. The debbuging of code containing partial interpretation is a highly complicated task, on which we worked extensively without success. 
 
 \subsection{Collaborative filtering and content based comparison}
 
