--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -356,24 +356,31 @@ Maybe the more important graph for the comparison is the one above. It tends to 
 % ------ discussion -------
 \section{Discussion}
 
+%%%%%%%% ATTENTION ICI Y A DES TRUCS %%%%%%%%
+\todo{traduire en anglais}
+On se rend compte que le greedy est meilleur que le random etc etc et ca on s'en fout on s'en doutait. Mais ce qui est fort c'est que le CF est meilleur que le CB. Pourtant dans le papier original il a implémenté que le CB. Donc pq ? est-ce qu'il s'en est juste pas douté ? ou pcq c'etait de la musique et pas des films. Si je ne m'abuse il dit qu'il choisit du CB pcq y a plus d'exploration et moins d'exploitation que du CF.  Simplement pcq le CF propose plus facilement des films tres connus que peu connus, de part sa nature.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \todo{would the result be correct recommendation, is it a viable way to do recommendation ? (expected result vs reality, time for a recommendation, accuracy, ....)}
 
 However, one could argues that the computation could be parallelized on multi-core or on a big data cluster.  \todo{dernier phrase in discussion}
 
 
-\todo{which strategy to use and which not to use ( including why bayes-ucb is not viable (way too much time an requires a user study to bootstrap)}
+true bayes-ucb => too slow
+epsilon-greedy and random => too bad
+greedy content based => good on average
+greedy CF => good on top of the pop
 
-\todo{content based vs collaborative, is collaborative viable}
+\todo{maintenant qu'on a fait la recherche, si tu devais créer un vrai système tu utilises quoi comme technique, traduire en anglais}
 
-\todo{maintenant qu'on a fait la recherche, si tu devais créer un vrai système tu utilises quoi comme technique}
+FACILE SALOPE du CB si c'est pas bcp rated et du CF si c'est bcp rated ou une approchye hybride comme qu'il dit pierre.
 
 \todo{futur work, what could be done if you give me 10 IA guys for a week}
-% combined content based and collaborative filtering
-% comparer avec une approche supervisé
+The above proposition about an hybrid approach
+Compare with a supervised approach
+Scale on a big data cluster => check if results are not biased by lack of data
+More time to work on bayesian inference
 
-\todo{futur work, real-life data, bias evaluation, big data toussa toussa}
-
-\todo{futur work, real-life data, bias evaluation, big data toussa toussa}
 
 \section{Conclusion}
 
