--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -367,6 +367,10 @@ The best techniques seems to take a greedy that explore a lot at the beginning a
 % ------ discussion -------
 \section{Discussion}
 
+Exploring user preferences is a central piece of a personalised recommender system and can be used as a context in a multi-armed bandit modelisation of the recommender as mentioned by \cite{main}.
+
+
+
 %%%%%%%% ATTENTION ICI Y A DES TRUCS %%%%%%%%
 \todo{traduire en anglais}
 On se rend compte que le greedy est meilleur que le random etc etc et ca on s'en fout on s'en doutait. Mais ce qui est fort c'est que le CF est meilleur que le CB. Pourtant dans le papier original il a implémenté que le CB. Donc pq ? est-ce qu'il s'en est juste pas douté ? ou pcq c'etait de la musique et pas des films. Si je ne m'abuse il dit qu'il choisit du CB pcq y a plus d'exploration et moins d'exploitation que du CF.  Simplement pcq le CF propose plus facilement des films tres connus que peu connus, de part sa nature.
