--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -259,7 +259,7 @@ Here are the results of the adaptation of \cite{main} to movie recommendation us
 \end{center}
 \end{figure}
 
-This graph tells us that on the long term or mid term, the recommender will give us better result than a random selection of movie. Also it underlines the importance of balancing exploration and exploitation. Indeed, the result difference between different greedy approach is quite significant.
+This graph tells us that on the long term or mid term, the recommender will give us better result than a random selection of movie. Also it underlines the importance of balancing exploration and exploitation. Indeed, the result difference between different greedy approach is quite significant. We can see that greedy UCB does not seem to work well.
 
 \begin{figure}[H]
 \begin{center}
