--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -369,6 +369,7 @@ The best techniques seems to take a greedy that explore a lot at the beginning a
 
 Exploring user preferences is a central piece of a personalised recommender system and can be used as a context in a multi-armed bandit modelisation of the recommender as mentioned by \cite{main}.
 
+As shown in the result the bayesian way is not viable as it is. Indeed, the exact bayesian takes way too much time to compute a single recommendation and attempts of implementation of the bayesian inference have not yield the expected results. However, for the exact model, one could argues that the computation could be parallelized on multi-core or on a big data cluster
 
 
 %%%%%%%% ATTENTION ICI Y A DES TRUCS %%%%%%%%
