--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -369,8 +369,14 @@ The best techniques seems to take a greedy that explore a lot at the beginning a
 
 Exploring user preferences is a central piece of a personalised recommender system and can be used as a context in a multi-armed bandit modelisation of the recommender as mentioned by \cite{main}.
 
-As shown in the result the bayesian way is not viable as it is. Indeed, the exact bayesian takes way too much time to compute a single recommendation and attempts of implementation of the bayesian inference have not yield the expected results. However, for the exact model, one could argues that the computation could be parallelized on multi-core or on a big data cluster
+As shown in the result the bayesian way is not viable as it is. Indeed, the exact bayesian takes way too much time to compute a single recommendation and attempts of implementation of the bayesian inference have not yield the expected results. However, for the exact model, one could argues that the computation could be parallelised on multi-core or on a big data cluster
 
+The comparison of the different viable algorithms have show the following : 
+\begin{itemize}
+	\item $\epsilon-greedy$ give on of the poorest result,
+	\item a greedy that variate the exploration and is content based give satisfactory results,
+	\item a greedy that variate the exploration and use collaborative filtering give the best results of all?
+\end{itemize}
 
 %%%%%%%% ATTENTION ICI Y A DES TRUCS %%%%%%%%
 %\todo{traduire en anglais}
@@ -379,15 +385,6 @@ As shown in the result the bayesian way is not viable as it is. Indeed, the exac
 
 The reason why the greedy-UCB algorithm does not seem to work well is that the UCB is very difficult to compute. Bayes-UCB should solve this problem by representing the rating as a random variable.
 
-%\todo{would the result be correct recommendation, is it a viable way to do recommendation ? (expected result vs reality, time for a recommendation, accuracy, ....)}
-
-%However, one could argues that the computation could be parallelized on multi-core or on a big data cluster.  \todo{dernier phrase in discussion}
-
-
-%true bayes-ucb => too slow
-%epsilon-greedy and random => too bad
-%greedy content based => good on average
-%greedy CF => good on top of the pop
 
 %\todo{maintenant qu'on a fait la recherche, si tu devais créer un vrai système tu utilises quoi comme technique, traduire en anglais}
 %FACILE SALOPE du CB si c'est pas bcp rated et du CF si c'est bcp rated ou une approchye hybride comme qu'il dit pierre.
