--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -378,7 +378,7 @@ The comparison of the different viable algorithms have show the following :
 	\item a greedy that variate the exploration and use collaborative filtering give the best results of all?
 \end{itemize}
 
-We ask the following question : does collaborative filtering models work better than content based models because we recommend movies or are the results generalizable to any kind of recommendation ?
+We ask the following question : does collaborative filtering models work better than content based models because we recommend movies or are the results generalizable to any kind of recommendation ? \cite{main} uses content-based models. In a future work, we could try the collaborative filtering models on music.
 
 %%%%%%%% ATTENTION ICI Y A DES TRUCS %%%%%%%%
 %\todo{traduire en anglais}
