--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -316,7 +316,7 @@ The Bayesian inference method shown in \citep{main} involve complexe computation
 
 \subsection{Collaborative filtering and content based comparison}
 
-Following, \cite{main} suggestion, we then looked at the collaborative filtering model to movie recommendation and compared it to content based. Here are the result.
+Following, \cite{main} suggestion, we then looked at the collaborative filtering model to movie recommendation and compared it to content based. Here are the results.
 
 \begin{figure}[H]
 \begin{center}
