--- a/report/recommendation-rl.tex
+++ b/report/recommendation-rl.tex
@@ -371,7 +371,7 @@ Exploring user preferences is a central piece of a personalised recommender syst
 
 As shown in the result the bayesian way is not viable as it is. Indeed, the exact bayesian takes way too much time to compute a single recommendation and attempts of implementation of the bayesian inference have not yield the expected results. However, for the exact model, one could argues that the computation could be parallelised on multi-core or on a big data cluster
 
-The comparison of the different viable algorithms have show the following : 
+The comparison of the different viable algorithms have shown the following : 
 \begin{itemize}
 	\item $\epsilon-greedy$ give on of the poorest result,
 	\item a greedy that variate the exploration and is content based give satisfactory results,
